Added sqlite database, added User class, added UserDataContext class.
Steps 1-3 from https://www.allhandsontech.com/programming/blazor/how-to-sqlite-blazor-4 [last accessed 28/02/2023]

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "UserDB": "Data Source=Data\\Users.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
